# deadline-cloud-for-nuke

./: .gitignore  CHANGELOG.md  DEVELOPMENT.md  README.md  depsBundle.sh  hatch.toml  hatch_version_hook.py  pyproject.toml  requirements-testing.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: e2e_test.yml  integ_test.yml  publish_release.yml  reuse_python_build.yml
install_builder/: deadline-cloud-for-nuke.xml
job_bundle_output_tests/cwd-path/expected_job_bundle/: asset_references.yaml  parameter_values.yaml  template.yaml
job_bundle_output_tests/cwd-path/scene/: cwd-path.nk
job_bundle_output_tests/frame/expected_job_bundle/: asset_references.yaml  parameter_values.yaml  template.yaml
job_bundle_output_tests/frame/scene/: frame.deadline_render_settings.json  frame.nk
job_bundle_output_tests/group-read/expected_job_bundle/: asset_references.yaml  parameter_values.yaml  template.yaml
job_bundle_output_tests/group-read/scene/: group-read.nk
job_bundle_output_tests/multi-load-save/expected_job_bundle/: asset_references.yaml  parameter_values.yaml  template.yaml
job_bundle_output_tests/multi-load-save/scene/: multi-load-save.nk
job_bundle_output_tests/noise-saver/: noise-saver.nk
job_bundle_output_tests/noise-saver/expected_job_bundle/: asset_references.yaml  parameter_values.yaml  template.yaml
job_bundle_output_tests/noise-saver/scene/: noise-saver.nk
job_bundle_output_tests/ocio/expected_job_bundle/: asset_references.yaml  parameter_values.yaml  template.yaml
job_bundle_output_tests/ocio/scene/: config.ocio  ocio.nk
scripts/: add_copyright_headers.sh  build_wheels.sh  create_adaptor_packaging_artifact.sh
src/: menu.py
src/deadline/: nuke_ocio.py
src/deadline/nuke_adaptor/NukeAdaptor/: __init__.py  __main__.py  adaptor.py
src/deadline/nuke_adaptor/NukeAdaptor/schemas/: init_data.schema.json  run_data.schema.json
src/deadline/nuke_adaptor/NukeClient/: __init__.py  nuke_client.py  nuke_handler.py
src/deadline/nuke_ocio/: __init__.py  nuke_ocio.py
src/deadline/nuke_submitter/: __init__.py  _logging.py  adaptor_override_environment.yaml  assets.py  data_classes.py  deadline_submitter_for_nuke.py  default_nuke_job_template.yaml  job_bundle_output_test_runner.py  menu.py
src/deadline/nuke_submitter/data_classes/: submission.py
src/deadline/nuke_submitter/ui/components/: scene_settings_tab.py
src/deadline/nuke_util/: ocio.py
test/deadline_adaptor_for_nuke/unit/NukeAdaptor/: test_adaptor.py
test/deadline_adaptor_for_nuke/unit/NukeClient/: __init__.py  mock_stubs.py  test_client.py  test_nuke_handler.py
test/deadline_submitter_for_nuke/unit/: __init__.py  mock_stubs.py  test_assets.py  test_deadline_submitter_for_nuke.py
test/deadline_submitter_for_nuke/unit/test_template_output/: expected_job_template_output.py  expected_job_template_with_wheel_output.py
test/unit/: __init__.py  mock_stubs.py
test/unit/deadline_adaptor_for_nuke/NukeAdaptor/: test_adaptor.py
test/unit/deadline_adaptor_for_nuke/NukeClient/: test_client.py  test_nuke_handler.py
test/unit/deadline_submitter_for_nuke/: mock_stubs.py  test_assets.py  test_gizmos.py  test_job_bundle_output_test_runner.py  test_menu.py  test_ocio.py
test/unit/nuke/: test_ocio_util.py
test/unit/nuke_ocio/: mock_stubs.py  test_nuke_ocio.py
test/unit/nuke_util/: test_ocio.py  test_ocio_util.py
