[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "deadline-cloud-for-nuke"
dynamic = ["version"]
readme = "README.md"
license = ""
requires-python = ">=3.7"

dependencies = [
    "deadline == 0.32.*",
    "openjd-adaptor-runtime == 0.3.*",
]

[project.scripts]
NukeAdaptor = "deadline.nuke_adaptor.NukeAdaptor:main"

[tool.hatch.build]
artifacts = [
  "*_version.py",
]
include = [
  # Include the starting job template/environment yaml files in the package
  "*.yaml",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
version_scheme = "post-release"

[tool.hatch.build.hooks.vcs]
version-file = "_version.py"

[tool.hatch.build.hooks.custom]
path = "hatch_custom_hook.py"

[tool.hatch.build.hooks.custom.copy_version_py]
destinations = [
  "src/deadline/nuke_adaptor",
  "src/deadline/nuke_util",
  "src/deadline/nuke_submitter",
]

[tool.hatch.build.targets.sdist]
include = [
    "src/*",
    "hatch_custom_hook.py",
]

[tool.hatch.build.targets.wheel]
packages = [
  "src/deadline",
]

[tool.mypy]
check_untyped_defs = true
show_error_codes = true
pretty = true
# Tell mypy that there's a namespace package at src/deadline
namespace_packages = true
explicit_package_bases = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = ["nuke.*","PySide2.*","PyOpenColorIO.*"]
ignore_missing_imports = true

[tool.ruff]
ignore = [
  "E501",
]
line-length = 100

[tool.ruff.isort]
known-first-party = [
  "deadline_worker_agent"
]

[tool.black]
line-length = 100

[tool.pytest.ini_options]
xfail_strict = true
addopts = [
    "--durations=5",
    "--cov=src/deadline/nuke_adaptor",
    "--cov=src/deadline/nuke_util",
    "--cov=src/deadline/nuke_submitter",
    "--color=yes",
    "--cov-report=html:build/coverage",
    "--cov-report=xml:build/coverage/coverage.xml",
    "--cov-report=term-missing",
    "--numprocesses=auto",
]
testpaths = [ "test/unit" ]
looponfailroots = [
    "src",
    "test/unit",
]
# looponfailroots is deprecated, this removes the deprecation from the test output
filterwarnings = [
    "ignore::DeprecationWarning"
]

[tool.coverage.run]
source_pkgs = [ "deadline/nuke_adaptor", "deadline/nuke_util", "deadline/nuke_submitter" ]
branch = true
parallel = true
omit = [
    "**/__main__.py",
    "**/_version.py",
    "*/deadline/nuke_submitter/ui/*",
    # The submitter will be covered by job bundle output tests
    "*/deadline/nuke_submitter/deadline_submitter_for_nuke.py"
]


[tool.coverage.paths]
source = [
  "src/"
]

[tool.coverage.report]
show_missing = true
fail_under = 73
